<?xml version="1.0"?>
<package format="2">
  <name>pimouse_controller</name>
  <version>0.1.0</version>
  <description>The pimouse_controller package</description>

  <maintainer email="macakasit@gmail.com">AkShota</maintainer>

  <license>TODO</license>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <exec_depend>pimouse_ros</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
